position of whoiam

--- a/CV.html
+++ b/CV.html
@@ -11,16 +11,19 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
-        .cv{
-            width: 100px;
+        cv{
+            width: 750px;
             height: 100px;
-            /* display: flex;
-            justify-content: flex-end; */
+            display: flex;
+            justify-content: flex-end;
+            align-items: end;
         }
-        img{
+        /* img{
+            width: 750px;
             display: flex;
             justify-content: end;
-        }
+            position: static;
+        } */
     </style>
 </head>
 <body>
