--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-                        <span class="image"><img src="images/IMG_4570.jpg" alt="" /></span>
+                        <span class="image"><img src="images/ingeniero.png" alt="" /></span>
 						<header>
 							<h2>Hola, Soy Eduardo</h2>
 							<p>TSU. Desarrollo de software multiplataforma<br />
