--- a/aboutme.html
+++ b/aboutme.html
@@ -25,9 +25,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-                        <span class="image"><img src="images/ingeniero.png" alt="" /></span>
+                        <span class="image"><img src="images/2.svg" alt="" /></span>
 						<header>
-							<h2>Hola, Soy Eduardo</h2>
+							<h2>Sobre mi</h2>
 							<p>TSU. Desarrollo de software multiplataforma<br />
 							Estudiante de Ing. en Gestion y Desarrollo de software</p>
 						</header>
