creacion de la pagina de skills

--- a/skills.html
+++ b/skills.html
@@ -11,52 +11,61 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Home</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="aboutme.html">Sobre mi</a></li>
-							<li><a href="skills.html">Skills</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<h1 id="logo"><a href="index.html">Home</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="aboutme.html">Sobre mi</a></li>
+						<li><a href="skills.html">Skills</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>Hola, Soy Eduardo</h2>
-							<p>TSU. Desarrollo de software multiplataforma<br />
-							Estudiante de Ing. en Gestion y Desarrollo de software</p>
-						</header>
-						<span class="image"><img src="images/IMG_4570.jpg" alt="" /></span>
-					</div>
+			<section id="banner">
+				<div class="content">
+					<table>
+						<tr>
+							<td><img src="assets/icons/DeviconHtml5.svg" alt="HTML Logo"></td>
+							<td><img src="assets/icons/DeviconCss3.svg" alt="CSS Logo"></td>
+							<td><img src="assets/icons/SkillIconsJavascript.svg" alt="JavaScript Logo"></td>
+						</tr>
+						<tr>
+							<td><img src="assets/icons/RiReactjsFill.svg" alt="React Logo"></td>
+							<td><img src="assets/icons/LogosAngularIcon.svg" alt="Angular Logo"></td>
+							<td><img src="assets/icons/LogosGitIcon.svg" alt="Git Logo"></td>
+						</tr>
+						<tr>
+							<td><img src="assets/icons/MdiGithub.svg" alt="GitHub Logo"></td>
+							<td><img src="assets/icons/LogosFlutter.svg" alt="Flutter Logo"></td>
+							<td><img src="assets/icons/LogosFirebase.svg" alt="Firebase Logo"></td>
+						</tr>
+					</table>
+				</div>
+			</section>
+		</div> <!-- Cierra el div con id="page-wrapper" -->
 
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
-
-		</div>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
