--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
+  					  <ul class="icons">
+      					  <li><a href="https://twitter.com/EdwHerCar" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+       					  <li><a href="https://www.facebook.com/EdwHerCar" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+      					  <li><a href="https://www.instagram.com/edwhercar" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+      					  <li><a href="https://www.linkedin.com/in/edwhercar" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+       					 <li><a href="https://github.com/EdwHerCar" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+   					  </ul>
+</footer>
 
 		</div>
 
