--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 						<ul>
 							<li><a href="aboutme.html">Sobre mi</a></li>
 							<li><a href="skills.html">Skills</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
+							<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -28,23 +28,29 @@
                         <span class="image"><img src="images/2.svg" alt="" /></span>
 						<header>
 							<h2>Sobre mi</h2>
-							<p>TSU. Desarrollo de software multiplataforma<br />
-							Estudiante de Ing. en Gestion y Desarrollo de software</p>
+							<p>Soy un apasionado desarrollador con experiencia <br>
+								el desarrollo de aplicaciones móviles. Mi objetivo <br>
+								es combinar mi creatividad y habilidades técnicas <br>
+								para crear experiencias de usuario excepcionales. <br>
+								Me apasiona el diseño UX/UI y siempre estoy en<br>
+								busqueda de  formas de mejorar la interacción y el <br>
+								atractivo visual de las aplicaciones.</p>
 						</header>
 						
 					</div>
 
 
+		</div>			
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://twitter.com/EdwHerCar" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/EdwHerCar" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/edwhercar" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.linkedin.com/in/edwhercar" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/EdwHerCar" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
-				</footer>
+<footer id="footer">
+	<ul class="icons">
+		<li><a href="https://twitter.com/EdwHerCar" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+		<li><a href="https://www.facebook.com/EdwHerCar" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+		<li><a href="https://www.instagram.com/edwhercar" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+		<li><a href="https://www.linkedin.com/in/edwhercar" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://github.com/EdwHerCar" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+	</ul>
+</footer>
 
 		</div>
 
