--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<ul>
 							<li><a href="aboutme.html">Sobre mi</a></li>
 							<li><a href="skills.html">Skills</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
+							<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -34,7 +34,7 @@
 						</header>
 
 					</div>
-
+		</div>
 
 			<!-- Footer -->
 				<footer id="footer">
