--- a/skills.html
+++ b/skills.html
@@ -82,7 +82,7 @@
 						<ul>
 							<li><a href="aboutme.html">Sobre mi</a></li>
 							<li><a href="skills.html">Skills</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
+							<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
 						</ul>
 					</nav>
 				</header>
